Revision history for Perl extension Module::Build.

 - Removed a mention of $build->{config} from the documentation, the
   official interface to Config.pm settings is now via the
   $build->config() and has been for some time. [Suggested by Michael
   Schwern]

 - Tweaked some text in the Cookbook to bring it into the modern age,
   and added a recipe for accessing Config.pm settings. [Ibid]

 - Lots of POD link/readability improvements to the Module::Build::API
   documentation [Salve J. Nilsen]

 - Added configure_requires as a new type of prereq.  [Suggested by Adam
   Kennedy]

 - Patch 31156 from bleadperl: some filename dot and extension help
   for Module::Build on VMS. [Craig Berry]

 - Reworked the _detildefy() method so it doesn't depend on glob()
   anymore.  This gets rid of a problem with spaces or other special
   shell characters in things like 'prefix' or 'install_path'
   entries. [Prodding by Eric Wilhelm]

 - Added midnightbsd to the list of Unix-like OSes we know about
   [Rafael Garcia-Suarez]

0.2808 - Sat Apr 28 12:59:43 2007

 - Added is_vmsish(), is_windowsish(), and is_unixish() boolean
   convenience functions.  Fixes some test failures on platforms where
   $^O is set to a value we don't know about (like 'gnu').

 - Upgraded to version.pm 0.7203. [John Peacock]

 - Support get_action_docs() =head2 style. [ewilhelm]

 - Workaround Test::Pod::Coverage @INC bug. [Eric Wilhelm]

 - Fixed the command-line args --extra_compiler_flags and
   --extra_linker_flags so they properly shell-split their arguments.

0.2807 - Sat Mar 24 22:19:02 2007

 - Upgraded to version.pm 0.71. [John Peacock]

 - Removed a couple small constructs in the tests ("use warnings;" and
   "qw$foo bar$[1]") that caused test failures under perl 5.005.

 - Added support for an explicit default value of undef in prompt().
   [Eric Wilhelm]

 - Improved our prompt() method, which could sometimes hang before the
   user got a chance to see a prompt. [Andreas Koenig]
